@@ -7,6 +7,7 @@ import org.apache.logging.log4j.Logger;
 import uk.nhs.nhsx.core.aws.cloudfront.AwsCloudFront;
 import uk.nhs.nhsx.core.aws.s3.AwsS3;
 import uk.nhs.nhsx.core.aws.s3.BucketName;
+import uk.nhs.nhsx.core.aws.s3.Locator;
 import uk.nhs.nhsx.core.aws.s3.ObjectKey;
 import uk.nhs.nhsx.core.signature.Signature;
 import uk.nhs.nhsx.core.signature.Signer;
@@ -23,160 +24,169 @@ import java.io.File;
 import java.io.IOException;
 import java.security.NoSuchAlgorithmException;
 import java.time.Duration;
-import java.util.*;
+import java.time.Instant;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.Date;
+import java.util.List;
+
+import static java.nio.charset.StandardCharsets.UTF_8;
+import static java.util.Collections.shuffle;
+import static uk.nhs.nhsx.diagnosiskeydist.DistributionServiceWindow.ZIP_SUBMISSION_PERIOD_OFFSET;
 
 /**
  * Batch job to generate and upload daily and two-hourly Diagnosis Key Distribution ZIPs every two hours during a 15' window
  */
 public class DistributionService {
-	private static final Logger logger = LogManager.getLogger(DistributionService.class);
+    private static final Logger logger = LogManager.getLogger(DistributionService.class);
 
-	private static final int MAXIMAL_ZIP_SIGN_S3_PUT_TIME_MINUTES = 6;
+    private static final int MAXIMAL_ZIP_SIGN_S3_PUT_TIME_MINUTES = 6;
 
-	static final String EK_EXPORT_V1_HEADER = "EK Export v1    ";
+    static final String EK_EXPORT_V1_HEADER = "EK Export v1    ";
 
-	private final SubmissionRepository submissionRepository;
+    private final SubmissionRepository submissionRepository;
 
-	private final ExposureProtobuf exposureProtobuf;
+    private final ExposureProtobuf exposureProtobuf;
 
-	private final KeyDistributor keyDistributor;
+    private final KeyDistributor keyDistributor;
 
-	private final Signer signer;
-	private final AwsCloudFront awsCloudFront;
-	private final AwsS3 awsS3;
-	private final BatchProcessingConfig config;
+    private final Signer signer;
+    private final AwsCloudFront awsCloudFront;
+    private final AwsS3 awsS3;
+    private final BatchProcessingConfig config;
 
-	private final List<String> uploadedZipFileNames = Collections.synchronizedList(new ArrayList<>());
+    private final List<String> uploadedZipFileNames = Collections.synchronizedList(new ArrayList<>());
 
-	DistributionService(SubmissionRepository submissionRepository,
-						ExposureProtobuf exposureProtobuf,
-						KeyDistributor keyDistributor,
-						Signer signer,
-						AwsCloudFront awsCloudFront,
-						AwsS3 awsS3,
-						BatchProcessingConfig config) {
-		this.submissionRepository = submissionRepository;
-		this.exposureProtobuf = exposureProtobuf;
-		this.keyDistributor = keyDistributor;
-		this.signer = signer;
-		this.awsCloudFront = awsCloudFront;
-		this.awsS3 = awsS3;
-		this.config = config;
-	}
+    DistributionService(SubmissionRepository submissionRepository,
+                        ExposureProtobuf exposureProtobuf,
+                        KeyDistributor keyDistributor,
+                        Signer signer,
+                        AwsCloudFront awsCloudFront,
+                        AwsS3 awsS3,
+                        BatchProcessingConfig config) {
+        this.submissionRepository = submissionRepository;
+        this.exposureProtobuf = exposureProtobuf;
+        this.keyDistributor = keyDistributor;
+        this.signer = signer;
+        this.awsCloudFront = awsCloudFront;
+        this.awsS3 = awsS3;
+        this.config = config;
+    }
 
-	public void distributeKeys(Date now) throws Exception {
-		DistributionServiceWindow window = new DistributionServiceWindow(now);
+    public void distributeKeys(Instant now) throws Exception {
+        DistributionServiceWindow window = new DistributionServiceWindow(now);
 
-		logger.info("Batch run triggered: now={}, earliest start={} (inclusive), lastest start={} (exclusive)", now, window.earliestBatchStartDateWithinHourInclusive(), window.latestBatchStartDateWithinHourExclusive());
+        logger.info("Batch run triggered: now={}, earliest start={} (inclusive), latest start={} (exclusive)", now, window.earliestBatchStartDateWithinHourInclusive(), window.latestBatchStartDateWithinHourExclusive());
 
-		if (!window.validBatchStartDate()) {
-			logger.error("CloudWatch Event triggered Lambda at wrong time.");
+        if (!window.isValidBatchStartDate()) {
+            logger.error("CloudWatch Event triggered Lambda at wrong time.");
 
-			if (config.shouldAbortOutsideTimeWindow) {
-				throw new IllegalStateException("CloudWatch Event triggered Lambda at wrong time.");
-			}
-		}
+            if (config.shouldAbortOutsideTimeWindow) {
+                throw new IllegalStateException("CloudWatch Event triggered Lambda at wrong time.");
+            }
+        }
 
-		List<Submission> allSubmissions = submissionRepository.loadAllSubmissions();
+        List<Submission> allSubmissions = submissionRepository.loadAllSubmissions();
 
-		for (ZIPSubmissionPeriod lastZipPeriod : Arrays.asList(
-				DailyZIPSubmissionPeriod.periodForSubmissionDate(now),
-				TwoHourlyZIPSubmissionPeriod.periodForSubmissionDate(now))) {
+        DailyZIPSubmissionPeriod daily = DailyZIPSubmissionPeriod.periodForSubmissionDate(now);
+        TwoHourlyZIPSubmissionPeriod twoHourly = TwoHourlyZIPSubmissionPeriod.periodForSubmissionDate(now);
+        for (ZIPSubmissionPeriod lastZipPeriod : List.of(daily, twoHourly)) {
+            try (ConcurrentExecution pool = new ConcurrentExecution("Distribution: " + lastZipPeriod.getClass().getSimpleName(), Duration.ofMinutes(MAXIMAL_ZIP_SIGN_S3_PUT_TIME_MINUTES))) {
+                for (ZIPSubmissionPeriod zipPeriod : lastZipPeriod.allPeriodsToGenerate()) {
+                    pool.execute(() -> distributeKeys(allSubmissions, window, zipPeriod));
+                }
+            }
+        }
 
-			try (ConcurrentExecution pool = new ConcurrentExecution("Distribution: " + lastZipPeriod.getClass().getSimpleName(), Duration.ofMinutes(MAXIMAL_ZIP_SIGN_S3_PUT_TIME_MINUTES))) {
-				for (ZIPSubmissionPeriod zipPeriod : lastZipPeriod.allPeriodsToGenerate()) {
-					pool.execute(() -> distributeKeys(allSubmissions, window, zipPeriod));
-				}
-			}
-		}
+        removeUnmodifiedObjectsFromDistributionBucket(config.zipBucketName);
+        invalidateCloudFrontCaches();
+    }
 
-		removeUnmodifiedObjectsFromDistributionBucket(config.zipBucketName);
-		invalidateCloudFrontCaches();
-	}
+    private void removeUnmodifiedObjectsFromDistributionBucket(BucketName bucketName) {
+        List<S3ObjectSummary> distributionObjectSummaries = awsS3.getObjectSummaries(bucketName);
+        for (S3ObjectSummary s3ObjectSummary : distributionObjectSummaries) {
+            if (!uploadedZipFileNames.contains(s3ObjectSummary.getKey())) {
+                logger.debug("Deleting outdated ZIP: {}", s3ObjectSummary.getKey());
+                awsS3.deleteObject(Locator.of(bucketName, ObjectKey.of(s3ObjectSummary.getKey())));
+            }
+        }
+    }
 
-	private void removeUnmodifiedObjectsFromDistributionBucket(BucketName bucketName) {
-		List<S3ObjectSummary> distributionObjectSummaries = awsS3.getObjectSummaries(bucketName.value);
-		for (S3ObjectSummary s3ObjectSummary : distributionObjectSummaries) {
-			if (!uploadedZipFileNames.contains(s3ObjectSummary.getKey())) {
-				logger.debug("Deleting outdated ZIP: {}", s3ObjectSummary.getKey());
-				awsS3.deleteObject(bucketName.value, s3ObjectSummary.getKey());
-			}
-		}
-	}
+    private void invalidateCloudFrontCaches() {
+        awsCloudFront.invalidateCache(
+            config.cloudFrontDistributionId, config.distributionPatternDaily
+        );
+        awsCloudFront.invalidateCache(
+            config.cloudFrontDistributionId, config.distributionPattern2Hourly
+        );
+    }
 
-	private void invalidateCloudFrontCaches() {
-		awsCloudFront.invalidateCache(
-			config.cloudFrontDistributionId, config.distributionPatternDaily
-		);
-		awsCloudFront.invalidateCache(
-			config.cloudFrontDistributionId, config.distributionPattern2Hourly
-		);
-	}
+    private void distributeKeys(List<Submission> submissions,
+                                DistributionServiceWindow window,
+                                ZIPSubmissionPeriod zipPeriod) throws IOException, NoSuchAlgorithmException {
 
-	private void distributeKeys(List<Submission> submissions,
-								DistributionServiceWindow window,
-								ZIPSubmissionPeriod zipPeriod) throws IOException, NoSuchAlgorithmException {
+        List<StoredTemporaryExposureKey> temporaryExposureKeys = validKeysFromSubmissions(submissions, window, zipPeriod);
 
-		List<StoredTemporaryExposureKey> temporaryExposureKeys = validKeysFromSubmissions(submissions, window, zipPeriod);
+        File binFile = File.createTempFile("export", ".bin");
+        File sigFile = File.createTempFile("export", ".sig");
 
-		File binFile = File.createTempFile("export", ".bin");
-		File sigFile = File.createTempFile("export", ".sig");
+        try {
+            byte[] binFileContent = generateExportFileContentFrom(temporaryExposureKeys, zipPeriod, ZIP_SUBMISSION_PERIOD_OFFSET);
+            KeyFileUtility.writeToFile(binFile, binFileContent);
 
-		try {
-			byte[] binFileContent = generateExportFileContentFrom(temporaryExposureKeys, zipPeriod, DistributionServiceWindow.ZIP_SUBMISSION_PERIOD_OFFSET_MINUTES);
-			KeyFileUtility.writeToFile(binFile, binFileContent);
+            byte[] sigFileContent = generateSigFileContentFrom(binFileContent);
+            KeyFileUtility.writeToFile(sigFile, sigFileContent);
 
-			byte[] sigFileContent = generateSigFileContentFrom(binFileContent);
-			KeyFileUtility.writeToFile(sigFile, sigFileContent);
+            String objectName = zipPeriod.zipPath();
+            keyDistributor.distribute(
+                config.zipBucketName,
+                ObjectKey.of(objectName),
+                binFile,
+                sigFile
+            );
+            uploadedZipFileNames.add(objectName);
+        } finally {
+            List.of(binFile, sigFile).forEach(it -> {
+                boolean ok = it.delete();
+                if (!ok) logger.warn("Could not delete {}", it.getAbsolutePath());
+            });
+        }
+    }
 
-			String objectName = zipPeriod.zipPath();
-			keyDistributor.distribute(
-				config.zipBucketName,
-				ObjectKey.of(objectName),
-				binFile,
-				sigFile
-			);
-			uploadedZipFileNames.add(objectName);
-		} finally {
-			binFile.delete();
-			sigFile.delete();
-		}
-	}
+    private List<StoredTemporaryExposureKey> validKeysFromSubmissions(List<Submission> submissions, DistributionServiceWindow window, ZIPSubmissionPeriod zipPeriod) {
+        List<StoredTemporaryExposureKey> temporaryExposureKeys = new ArrayList<>();
+        for (Submission submission : submissions) {
+            if (zipPeriod.isCoveringSubmissionDate(submission.submissionDate.toInstant(), ZIP_SUBMISSION_PERIOD_OFFSET)) {
+                for (StoredTemporaryExposureKey key : submission.payload.temporaryExposureKeys) {
+                    ENIntervalNumber keyIntervalNumber = new ENIntervalNumber(key.rollingStartNumber);
 
-	private List<StoredTemporaryExposureKey> validKeysFromSubmissions(List<Submission> submissions, DistributionServiceWindow window, ZIPSubmissionPeriod zipPeriod) {
-		List<StoredTemporaryExposureKey> temporaryExposureKeys = new ArrayList<>();
-		for (Submission submission : submissions) {
-			if (zipPeriod.isCoveringSubmissionDate(submission.submissionDate, DistributionServiceWindow.ZIP_SUBMISSION_PERIOD_OFFSET_MINUTES)) {
+                    if (keyIntervalNumber.validUntil(Date.from(window.zipExpirationExclusive()))) {
+                        logger.debug("{}: included submission: {}: included: {}", zipPeriod.zipPath(), submission.submissionDate, keyIntervalNumber);
+                        temporaryExposureKeys.add(key);
+                    }
+                }
+            }
+        }
 
-				for (StoredTemporaryExposureKey key : submission.payload.temporaryExposureKeys) {
-					ENIntervalNumber keyIntervalNumber = new ENIntervalNumber(key.rollingStartNumber);
+        // Important: the keys must not be distributed in submission order for privacy reasons
+        shuffle(temporaryExposureKeys);
 
-					if (keyIntervalNumber.validUntil(window.zipExpirationExclusive())) {
-						logger.debug("{}: included submission: {}: included: {}", zipPeriod.zipPath(), submission.submissionDate, keyIntervalNumber);
+        return temporaryExposureKeys;
+    }
 
-						temporaryExposureKeys.add(key);
-					}
-				}
-			}
-		}
+    private byte[] generateExportFileContentFrom(List<StoredTemporaryExposureKey> temporaryExposureKeys,
+                                                 ZIPSubmissionPeriod period,
+                                                 Duration periodOffset) throws IOException {
+        ByteArrayOutputStream bout = new ByteArrayOutputStream();
+        bout.write(EK_EXPORT_V1_HEADER.getBytes(UTF_8));
+        Exposure.TemporaryExposureKeyExport export = exposureProtobuf.buildTemporaryExposureKeyExport(temporaryExposureKeys, period, periodOffset.toMinutes());
+        bout.write(export.toByteArray());
+        return bout.toByteArray();
+    }
 
-		Collections.shuffle(temporaryExposureKeys);
-
-		return temporaryExposureKeys;
-	}
-
-	private byte[] generateExportFileContentFrom(List<StoredTemporaryExposureKey> temporaryExposureKeys, ZIPSubmissionPeriod period, int periodOffsetMinutes) throws IOException {
-		ByteArrayOutputStream bout = new ByteArrayOutputStream();
-		bout.write(EK_EXPORT_V1_HEADER.getBytes());
-		Exposure.TemporaryExposureKeyExport export = exposureProtobuf.buildTemporaryExposureKeyExport(temporaryExposureKeys, period, periodOffsetMinutes);
-		bout.write(export.toByteArray());
-		return bout.toByteArray();
-	}
-
-	private byte[] generateSigFileContentFrom(byte[] binFileContent) {
-		Signature signature = signer.sign(binFileContent);
-		Exposure.TEKSignatureList tekSignatureList = exposureProtobuf.buildTEKSignatureList(signature.asByteBuffer());
-		return tekSignatureList.toByteArray();
-	}
-
+    private byte[] generateSigFileContentFrom(byte[] binFileContent) {
+        Signature signature = signer.sign(binFileContent);
+        Exposure.TEKSignatureList tekSignatureList = exposureProtobuf.buildTEKSignatureList(signature.asByteBuffer());
+        return tekSignatureList.toByteArray();
+    }
 }
